2004-03-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/type-register.rb: Omit a parameter for type_register.

2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h src/rbgobj_object.c src/rbgobj_paramspecs.c
	  src/rbgobj_signal.c src/rbgobj_type.c src/rbgobject.c
	  src/rbgobject.h src/rbgutil.c src/lib/mkmf-gnome2.rb: Update Copyright.
	* src/lib/mkmf-gnome2.rb: Work under ruby-1.8.1 or later on Cygwin.

2004-03-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_object.c: Fix a memleak for GLib::Object#properties. 
	* src/rbgobj_signal.c: Fix a memleak for GLib::Object#signals. 

2004-03-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgutil.c: Work under ruby-1.6.8. 
	The idea is from Sasada Koichi.

2004-03-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: Increment version number.

2004-02-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.c: Remove id, send from prop_exclude_list. 

2004-02-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.h: Add G_DEF_CLASS3(). This is for real-gtype
	but its foo_get_type() isn't public method such as GdkScreenX11.
	* src/rbgobj_type.c: Add RGObjClassInfoDynamic and G_DEF_CLASS3().
	* src/glib2.def: ditto.

2004-02-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.c: prop_exclude_list defined as a static hash. 

2004-02-14  Vincent Isambart <isambart@netcourrier.com>

	* src/lib/mkmf-gnome2.rb: replaced PLATFORM with RUBY_PLATFORM

2004-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_paramspecs.c: Fix a bug for GLib::Param::Flags.new. 

2003-12-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_object.c: Fix a typo. Pointed out by Kazuhiro NISHIYAMA.

2003-12-21  Kenichi Komiya <kom@mail1.accsnet.ne.jp>

	* src/rbgobj_object.c: Check when the first argument is nil or Hash.

2003-11-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: increment RBGLIB_MICRO_VERSION.

2003-11-15  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_enums.c: disable range checks.
