@@ -1,3 +1,7 @@
+2004-03-10  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgobj_type.c: Fix a compilation error on MinGW.
+
 2004-03-07  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* sample/type-register.rb: Omit a parameter for type_register.
